# Flower-Decentralized-AI-Hackathon

./: .gitignore  README.md  pyproject.toml  save_datasets.ipynb  test.py  validation_data.json
medapp/: client_app.py  main.py  server_app.py  task.py
medapp/service/: api.py  llm.py
