# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medapp"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "datasets>=4.1.1",
    "fastapi>=0.117.1",
    "flwr[simulation]>=1.22.0",
    "matplotlib>=3.10.6",
    "python-multipart>=0.0.20",
    "streamlit>=1.50.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "uvicorn>=0.37.0",
    "wandb==0.21.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "medapp.server_app:app"
clientapp = "medapp.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 0.5
local-epochs = 5
num-classes = 9
dataset = "pathmnist"
lr = 0.0025
use-wandb = false
wandb-token = "4815b87637a4a9ac57e93ca23808eb4ca49102ed"

# Default federation to use when running the app
[tool.flwr.federations]
default = "remote-federation"

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "hackathon.flower.ai"
enable-user-auth = true
options.num-supernodes = 8
